unpackaged/main/default/objects/ValuePlus__c/fields/MC_Principal_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>MC_Principal_2_First_Name__c</fullName>
    <description>MC,IM; R151946, R2027302; Edited: Sertifi Integ, users</description>
    <label>MC/IM - Principal 2 First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>