unpackaged/main/default/objects/ValuePlus__c/fields/MC_Principal_2_Name__c.field-meta.xml
<CustomField>
    <fullName>MC_Principal_2_Name__c</fullName>
    <formula>MC_Principal_2_First_Name__c &amp; &quot; &quot; &amp; MC_Principal_2_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Principal 2 Name</label>
    <type>Text</type>
</CustomField>