unpackaged/main/default/objects/ValuePlus__c/fields/MC_Principal_3_Zip__c.field-meta.xml
<CustomField>
    <fullName>MC_Principal_3_Zip__c</fullName>
    <description>MC,IM; R151946, R2027302; Edited: Sertifi Integ, users</description>
    <label>MC/IM - Principal 3 Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>