unpackaged/main/default/objects/ValuePlus__c/fields/MC_Year_Established__c.field-meta.xml
<CustomField>
    <fullName>MC_Year_Established__c</fullName>
    <description>MC,IM; R151946, R2027302; Edited: users</description>
    <label>MC/IM - Year Established</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>