unpackaged/main/default/objects/ValuePlus__c/fields/Monthly_Fee_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee_Start_Date__c</fullName>
    <label>Monthly Fee Start Date</label>
    <type>Date</type>
</CustomField>