unpackaged/main/default/objects/ValuePlus__c/fields/MyCase_Days_in_OnBoarding__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Days_in_OnBoarding__c</fullName>
    <description>Created by R152725</description>
    <formula>IF( RecordType.Name = &#39;MyCase Payments&#39;, BLANKVALUE(Go_Live__c, TODAY()) - BLANKVALUE(Sold_Not_Started__c, Opp_Close_Date__c), 

IF( RecordType.Name = &#39;MyCase Websites&#39;, BLANKVALUE(Go_Live__c, TODAY()) - BLANKVALUE(KOC__c,  Content_Acquisition__c), 

NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyCase Days in OnBoarding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>