unpackaged/main/default/objects/ValuePlus__c/fields/MyCase_ID__c.field-meta.xml
<CustomField>
    <fullName>MyCase_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External Id of record from legacy MC system</description>
    <externalId>true</externalId>
    <label>MyCase ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>