unpackaged/main/default/objects/ValuePlus__c/fields/MyCase_Sub_Domain__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Sub_Domain__c</fullName>
    <label>MyCase Sub-Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>