unpackaged/main/default/objects/ValuePlus__c/fields/MyCase_Sub_Domain_Old__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Sub_Domain_Old__c</fullName>
    <description>Created by request R151733, updated per R176870</description>
    <formula>HYPERLINK(  Account__r.MyCase_Sub_Domain__c  , Account__r.MyCase_Sub_Domain__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyCase Sub-Domain Old</label>
    <type>Text</type>
</CustomField>