unpackaged/main/default/objects/ValuePlus__c/fields/MyCase_Websites_Days_to_Live__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Websites_Days_to_Live__c</fullName>
    <description>MyCase days to go live for websites from questionnaire received</description>
    <formula>IF( RecordType.Name = &#39;MyCase Websites&#39;, 

CASE( Stage__c, &quot;Live&quot;,

IF( AND( NOT (ISBLANK(Go_Live__c)), NOT (ISBLANK(KOC_Confirmed__c))),

Go_Live__c - KOC_Confirmed__c, 0),

0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MyCase days to go live for websites from questionnaire received</inlineHelpText>
    <label>MyCase Websites Days to Live</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>