unpackaged/main/default/objects/ValuePlus__c/fields/MyCase_Websites_Implementation__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Websites_Implementation__c</fullName>
    <formula>VALUE(TEXT(MyCaseWebsiteImplFee__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyCase Websites Implementation $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>