unpackaged/main/default/objects/ValuePlus__c/fields/MyCaseWebsiteImplFee__c.field-meta.xml
<CustomField>
    <fullName>MyCaseWebsiteImplFee__c</fullName>
    <label>MyCase Website Implementation Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>995</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>1500</fullName>
            </value>
            <value>
                <fullName>750</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>