unpackaged/main/default/objects/ValuePlus__c/fields/No_Website_2_0_Processing__c.field-meta.xml
<CustomField>
    <fullName>No_Website_2_0_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Website 2.0 Processing</label>
    <type>Checkbox</type>
</CustomField>