unpackaged/main/default/objects/ValuePlus__c/fields/No_Zuora__c.field-meta.xml
<CustomField>
    <fullName>No_Zuora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Zuora</label>
    <type>Checkbox</type>
</CustomField>