unpackaged/main/default/objects/ValuePlus__c/fields/Number_of_Firm_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Firm_Users__c</fullName>
    <description>Created by request R151733, updated per R176870</description>
    <formula>Account__r.Total_Users__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Firm Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>