unpackaged/main/default/objects/ValuePlus__c/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <label>Number of Locations</label>
    <summaryFilterItems>
        <field>Bank_Account__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Inactive</value>
    </summaryFilterItems>
    <summaryForeignKey>Bank_Account__c.ValuePlus__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>