unpackaged/main/default/objects/ValuePlus__c/fields/of_Monthly_Contributions__c.field-meta.xml
<CustomField>
    <fullName>of_Monthly_Contributions__c</fullName>
    <description>IM; R2027435; Edited: users</description>
    <label># of Monthly Contributions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>