unpackaged/main/default/objects/ValuePlus__c/fields/Old_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Old_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R164419</description>
    <label>Old Agreement</label>
    <type>Checkbox</type>
</CustomField>