unpackaged/main/default/objects/ValuePlus__c/fields/On_Boarding_Approved__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Approved__c</fullName>
    <description>Date On-Boarding was set to Approved</description>
    <label>On-Boarding Approved</label>
    <type>Date</type>
</CustomField>