unpackaged/main/default/objects/ValuePlus__c/fields/On_Boarding_Contact_Phone_Primary__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Contact_Phone_Primary__c</fullName>
    <formula>IF( ISBLANK(On_Boarding_Contact_Primary__r.Phone), Account__r.Phone ,On_Boarding_Contact_Primary__r.Phone)</formula>
    <label>On-Boarding Contact Phone (Primary)</label>
    <type>Text</type>
</CustomField>