unpackaged/main/default/objects/ValuePlus__c/fields/On_Boarding_Contact_Primary__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Contact_Primary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On-Boarding Contact (Primary)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Value+</relationshipLabel>
    <relationshipName>Value</relationshipName>
    <type>Lookup</type>
</CustomField>