unpackaged/main/default/objects/ValuePlus__c/fields/On_Boarding_Contact_PrimaryId__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Contact_PrimaryId__c</fullName>
    <formula>On_Boarding_Contact_Primary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On-Boarding Primary Contact ID</label>
    <type>Text</type>
</CustomField>