unpackaged/main/default/objects/ValuePlus__c/fields/On_Boarding_Notes__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Notes__c</fullName>
    <label>On-Boarding Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>