unpackaged/main/default/objects/ValuePlus__c/fields/On_Boarding_Status_Entered__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Status_Entered__c</fullName>
    <label>On-Boarding Status Entered</label>
    <type>Date</type>
</CustomField>