unpackaged/main/default/objects/ValuePlus__c/fields/On_Hold_Non_Responsive__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Non_Responsive__c</fullName>
    <description>R166090</description>
    <label>On Hold/ Non Responsive</label>
    <type>Date</type>
</CustomField>