unpackaged/main/default/objects/ValuePlus__c/fields/onboarding_specialist__c.field-meta.xml
<CustomField>
    <fullName>onboarding_specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On-Boarding Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Value1</relationshipName>
    <type>Lookup</type>
</CustomField>