unpackaged/main/default/objects/ValuePlus__c/fields/OnBoardingStatus__c.field-meta.xml
<CustomField>
    <fullName>OnBoardingStatus__c</fullName>
    <label>On-Boarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Review</fullName>
            </value>
            <value>
                <fullName>Welcome Scheduled</fullName>
            </value>
            <value>
                <fullName>Inspection Ordered</fullName>
            </value>
            <value>
                <fullName>Collecting Documents</fullName>
            </value>
            <value>
                <fullName>Documents Received</fullName>
            </value>
            <value>
                <fullName>Escalated to Compliance</fullName>
            </value>
            <value>
                <fullName>Merchant App Sent</fullName>
            </value>
            <value>
                <fullName>Merchant App Received</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending Peer Review</fullName>
            </value>
            <value>
                <fullName>Sent to Underwriting</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Underwritten</fullName>
            </value>
            <value>
                <fullName>Peer Review Rejected</fullName>
            </value>
            <value>
                <fullName>Ready to transmit</fullName>
            </value>
            <value>
                <fullName>Transmitted</fullName>
            </value>
            <value>
                <fullName>Ready to Go Live</fullName>
            </value>
            <value>
                <fullName>Ready for APM</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Apm data pull failure</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Pending Compliance Review</fullName>
            </value>
            <value>
                <fullName>Compliance Review Rejected</fullName>
            </value>
            <value>
                <fullName>Welcome Missed</fullName>
            </value>
            <value>
                <fullName>Pending Data Ver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>