unpackaged/main/default/objects/ValuePlus__c/fields/Open_Edge_Customer__c.field-meta.xml
<CustomField>
    <fullName>Open_Edge_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Edge Customer</label>
    <type>Checkbox</type>
</CustomField>