unpackaged/main/default/objects/ValuePlus__c/fields/Open_Edge_Customer_old__c.field-meta.xml
<CustomField>
    <fullName>Open_Edge_Customer_old__c</fullName>
    <description>R164064</description>
    <formula>Account__r.Open_Edge_Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Edge Customer old</label>
    <type>Checkbox</type>
</CustomField>