unpackaged/main/default/objects/ValuePlus__c/fields/Opp_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Close_Date__c</fullName>
    <description>R2024774; R2025774</description>
    <formula>Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Close Date</label>
    <type>Date</type>
</CustomField>