unpackaged/main/default/objects/ValuePlus__c/fields/Opportunity_Notes__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Notes__c</fullName>
    <description>R166087</description>
    <label>Opportunity Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>