unpackaged/main/default/objects/ValuePlus__c/fields/Outbound_MID__c.field-meta.xml
<CustomField>
    <fullName>Outbound_MID__c</fullName>
    <description>Created by R152610
Updated By  R163828</description>
    <label>Outbound MID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>