unpackaged/main/default/objects/ValuePlus__c/fields/Outbound_Period_Count__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Period_Count__c</fullName>
    <description>Updated help text and added process to auto populate this field through request R164212.
Updated per R152784</description>
    <inlineHelpText>Auto calculates to: &#39;# Owners/Vendors x 1.5&#39; when Record Type = APM Payments &amp; Outbound On-Boarding Status=Pending Peer Review. Auto updates only one time upon meeting criteria &amp; can be manually updated before/after auto update.</inlineHelpText>
    <label>Outbound Period Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>