unpackaged/main/default/objects/ValuePlus__c/fields/Outbound_Single_Day_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Single_Day_Amount__c</fullName>
    <description>Updated help text and added process to auto populate this field through request R164212.
Updated per R152784</description>
    <inlineHelpText>Auto calculates to: &#39;Average O/V Payment X # of Owners/Vendors x 1.5&#39; when Record Type = APM Payments &amp; Outbound On-Boarding Status=Pending Peer Review. Auto updates only one time upon meeting criteria &amp; can be manually updated before/after auto update.</inlineHelpText>
    <label>Outbound Single Day Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>