unpackaged/main/default/objects/ValuePlus__c/fields/Outbound_Single_Trans_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Single_Trans_Amount__c</fullName>
    <description>Updated help text and added process to auto populate this field through request R164212.
Updated per R152784</description>
    <inlineHelpText>Auto populates value from field &#39;Highest O/V payment x 1.5&#39; when Record Type = APM Payments &amp; Outbound On-Boarding Status=Pending Peer Review. Auto updates only one time upon meeting criteria &amp; can be manually updated before/after auto update.</inlineHelpText>
    <label>Outbound Single Trans Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>