unpackaged/main/default/objects/ValuePlus__c/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <formula>TEXT( Account__r.Ownership_Type__c )</formula>
    <label>Ownership Type</label>
    <type>Text</type>
</CustomField>