unpackaged/main/default/objects/ValuePlus__c/fields/Payment_Processing_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processing_Days__c</fullName>
    <description>The number of days for Profit Stars to process a payment - R2025316</description>
    <label>Payment Processing Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Days</fullName>
                <default>true</default>
                <label>3 Days</label>
            </value>
            <value>
                <fullName>0 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>