unpackaged/main/default/objects/ValuePlus__c/fields/Payment_Services_Rep__c.field-meta.xml
<CustomField>
    <fullName>Payment_Services_Rep__c</fullName>
    <formula>Account__r.Payment_Services_Rep__r.FirstName &amp; &quot; &quot; &amp;  Account__r.Payment_Services_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Services Rep</label>
    <type>Text</type>
</CustomField>