unpackaged/main/default/objects/ValuePlus__c/fields/Payments_Live_Case__c.field-meta.xml
<CustomField>
    <fullName>Payments_Live_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to flag if a Payments Live Case has been created once a status of Live is selected.</description>
    <label>Payments Live Case</label>
    <type>Checkbox</type>
</CustomField>