unpackaged/main/default/objects/ValuePlus__c/fields/Payments_Unresponsive_case__c.field-meta.xml
<CustomField>
    <fullName>Payments_Unresponsive_case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Flow to stop the creation of case when status of Unresponsive is entered.</description>
    <label>Payments Unresponsive case</label>
    <type>Checkbox</type>
</CustomField>