unpackaged/main/default/objects/ValuePlus__c/fields/PayNearMeOnBoarding__c.field-meta.xml
<CustomField>
    <fullName>PayNearMeOnBoarding__c</fullName>
    <description>used for the pay near me integration</description>
    <label>Pay Near Me On-Boarding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Transmit</fullName>
            </value>
            <value>
                <fullName>Transmitted</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>